<resources>
    <string name="app_name">magang1</string>
    <string name="username">Nama</string>
    <string name="lahir">Tanggal lahir</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fill_data">Tidak boleh kosong</string>
    <string name="six_char">Password minimal 6 karakter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="kode_produk">Kode Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="produk">PRODUK</string>
    <string name="delete">Delete</string>
</resources>