<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.detailproduk.DetailProdukActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/preview"/>

    <TextView
        android:id="@+id/tv_txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/produk"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/tv_txt_login">

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_produk"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_username">

        <EditText
            android:id="@+id/et_kode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kode_produk"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_email">

        <EditText
            android:id="@+id/et_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga_produk"
            android:padding="5dp"
            android:fontFamily="@font/poppins"
            android:inputType="number"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_date">

        <EditText
            android:id="@+id/et_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah"
            android:inputType="number"
            android:fontFamily="@font/poppins"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>