<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.register.RegisterActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/preview"/>

    <TextView
        android:id="@+id/tv_txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="REGISTER"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/tv_txt_login">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_person_24"/>

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:background="@color/teal_700"
            android:layout_toEndOf="@id/iv_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:layout_toEndOf="@id/line" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_username">

        <ImageView
            android:id="@+id/iv_image_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_email_24"/>

        <View
            android:id="@+id/line_email"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:background="@color/teal_700"
            android:layout_toEndOf="@id/iv_image_email"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:layout_toEndOf="@id/line_email" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_email">

        <ImageView
            android:id="@+id/iv_image_date"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_date_range_24"/>

        <View
            android:id="@+id/line_date"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:background="@color/teal_700"
            android:layout_toEndOf="@id/iv_image_date"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lahir"
            android:padding="5dp"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:layout_toEndOf="@id/line_date" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@id/rl_date">

        <ImageView
            android:id="@+id/iv_image_pass"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_lock_24"/>

        <View
            android:id="@+id/line_pass"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:background="@color/teal_700"
            android:layout_toEndOf="@id/iv_image_pass"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:layout_toEndOf="@id/line_pass" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>